Fix cookie banner z-index and broken question page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -230,7 +230,7 @@ p > a {
 }
 
 .cookie-consent__container {
-  z-index: 999;
+  z-index: 777;
 }
 
 .cookie-consent__banner {
